--- a/Interfata/interfata.css
+++ b/Interfata/interfata.css
@@ -10,6 +10,7 @@
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url("background.jpeg");
     background-size: cover;
     background-position: center;
+    align-items: center;
 }
 .navbar{
     width:85%;
@@ -51,7 +52,7 @@
 .content{
     width: 100%;
     position: absolute;
-    top: 50%;
+    top: 60%;
     transform: translateY(-50%);
     text-align: center;
     color: white;
@@ -60,14 +61,16 @@
     font-size: 70px;
     margin-top: 80px;
 }
+
 .content p{
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
 }
-button{
+.button{
     width: 200px;
     padding: 15px 0;
+    text-decoration: none;
     text-align: center;
     margin: 20px 10px;
     border-radius: 25px;
@@ -92,17 +95,113 @@ span{
     transition: 0.5s;
 }
 
-button:hover span{
+.button:hover span{
     width: 100%;
 }
-button hover{
+.button hover{
     border: none;
 }
 
+.pagename{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+    width: 100%;
+    position: absolute;
+    top: 25%;
+    transform: translateY(-30%);
+    border-bottom: solid 3px #eb7c05;
 
+}
+.pagename h2{
+    
+    text-align: left;
+    color: white;
+    
+}
 
+input[type=text], select {
+    width: 60%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid rgb(235, 192, 192);
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 40%;
+    background-color: #eb7c05;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #de3d0c;
+  }
+  
+  .form {
+    border-radius: 5px;
+    background: linear-gradient(#c69762,rgba(0,0,0,0.75));
+   
+    padding: 20px;
+    width:50%;
+    border: 2px solid #eb7c05;
+  }
 
+.formdiv{
+    display: flex;
+    justify-content: center;
+}
+.content ul li{
+    align-items: center;
+    padding: 10px 50px;
+    
+}
+.content ul li a{
+    text-decoration: underline;
+    color: white;
+    text-decoration-color: #de3d0c;
+}  
+ul.list{
+    list-style-type: circle;
+} 
+.contact{
+    width: 80%;
+    top:10%;
+    bottom:10%;
+    position: absolute;
+   
+    transform: translateY(-60%);
+    text-align: center;
+    color: white;
+     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
 
+}
+.formcontact{
+    display: flex;
+    width: 60%;
+    padding-top: 55%;
+    padding-left: 25%;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.subj{
+    width:60%;
 
-
-
+}
+div+div{
+    margin-bottom: 30px;
+}
